# photo-pupper

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
.github/workflows/: ros2_ci.yml
config/: node_config.yml
launch/: photobooth_launch.py
photo_pupper/: fsm_node.py  movement_node.py  people_detection_node.py  photo_processing_node.py  printer_node.py  screen_node.py  touch_node.py
srv/: PrintImage.srv  ProcessPhoto.srv
